# ProductivityDashboard

./: .gitignore  Assignment_UseCaseDiagram.docx  BEFORE_AFTER_COMPARISON.md  DEMO_GUIDE.md  DEMO_QUICK_START.md  FINAL_SUBMISSION.md  FUNCTIONAL_DEMO_README.md  GITHUB_DESKTOP_GUIDE.md  GITHUB_UPLOAD_COMPLETE.md  GITHUB_UPLOAD_GUIDE.md  NAVIGATION_COMPLETE.md  NEW_CODE_HIGHLIGHTED.js  QUICK_REFERENCE.md  README.md  SCHOOL_SUBMISSION_GUIDE.md  SCREENCAST_CHECKLIST.md  Start of software school.docx  T2_ENHANCED_COMPLETE.md  TESTING_SITES_GUIDE.md  UPLOAD_SUCCESS.md  UseCase.pptx  WEB_PREVIEW_GUIDE.md  code-test.html  dashboard-complete-nav.css  dashboard-complete-nav.html  dashboard-complete-nav.js  dashboard-enhanced.css  dashboard-enhanced.html  dashboard-enhanced.js  dashboard-functional.html  dashboard-functional.js  dashboard-only.html  dashboard-preview.css  dashboard-preview.html  dashboard-preview.js  index.html  script.js  setup-github.bat  setup-github.ps1  style.css
cpp-dashboard/: BUILD_CONSOLE.md  Button.hpp  CMakeLists.txt  ChartsDataModel.hpp  ChartsScreen.hpp  ChartsScreenComplete.hpp  DashboardScreen.hpp  DashboardScreenEnhanced.hpp  GamificationModel.hpp  GamifiedScreen.hpp  GamifiedScreenComplete.hpp  HabitModel.hpp  MenuScreen.hpp  README.md  README_T1_T2.md  Screen.hpp  ScreenManager.hpp  SettingsScreen.hpp  SettingsScreenComplete.hpp  main.cpp  main_complete.cpp  main_console.cpp  main_dashboard.cpp  main_dashboard_enhanced.cpp
cpp-dashboard/assets/: AUDIO_README.txt  README.txt
